--- a/progress2.html
+++ b/progress2.html
@@ -34,7 +34,7 @@
         <div class="navbar__links">
             <a href="index.html">Home</a>
             <a href="progress1.html">P.I</a>
-            <a href="progress2.html">P.II</a>
+            <a href="progress3.html">P.III</a>
         </div>
     </header>
 
