--- a/w13.html
+++ b/w13.html
@@ -47,36 +47,7 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w9_myear.jpeg" alt="My ear">
-                </div>
-            </div>
-
-            <div class="col right-col">
-                <h2 class="content-title">
-                    What impact could your creative work have on society?
-                </h2>
-                <p>
-                    I don't know if my creative work could have a reallyinpact on society or maybe yes. I depends on
-                    what craetive works we are talking about if it in only refering to my art process I belive no
-                    because i write some stories sometimes, i usually draw and i make some art on digitals platforms.
-                    Also i do photography. But i that stuff for <b>Me</b> i usually dont like to share those things
-                    cause i don't have people who are interested in those things.
-                    <br>
-                    But there are anoher creative work i do and it is more relationate to tech. I like to do creative
-                    things with tech and i think that stuff could have an impact on society. But those processes usually
-                    are not related to art.
-                </p>
-            </div>
-        </div>
-    </section>
-
-    <!-- act 2 -->
-    <section class="bio">
-        <div class="bio__content">
-
-            <div class="col left-col">
-                <div class="bio__card">
-                    <img src="img/artdev/progress3/w13_video.jpeg" alt="yellow">
+                    <img src="img/artdev/progress3/w13_video.jpeg" alt="mashups">
                 </div>
             </div>
 
@@ -85,15 +56,16 @@
                     Weekly Video Summary
                 </h2>
                 <p>
-                    <br><br>
-                    The videos of this week were really useful and powerful
-                    <br><br>
-                    Those videos were so important cause the speakers show us how important art is on society
-                    and in history.
-                    How we all can go down in history with our creativity and the art of that processes.
-                    As well the videos show how some people do process of art and creativity with small things and that
-                    is very useful to see because is inspiring to me to continue with my creative work even if it seems
-                    small or useless.
+                    The video show us some wortk about art apropiation, it's ok but I still think there is something
+                    wrong with a society that
+                    keeps remixing over and over again, rebooting, revisiting and producing sequels and prequels because
+                    it's unable or unwilling to create its own
+                    original artwork.
+                    God knows many artists work hard and make very little money. Isn't their
+                    labour worth a salary? Should we be allowed to steal it as much as we like? Also, a remix artist is
+                    sure to succeed because the material he is using has already succeeded massively and is familiar to
+                    people. Those mashups artists already has an audience.
+                    Perhaps, i like the idea of resalt the best of humanity creativity by doing this kind of stuff.
                 </p>
             </div>
         </div>
@@ -105,19 +77,26 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress3/w13_questions.jpeg" alt="revo">
+                    <img src="img/artdev/progress3/w13_questions.jpeg" alt="dj">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Can art correct history?
+                    What about copyrights in the work of DJs or covers of songs?
+                    what about remakes of certain movies?
                 </h2>
                 <p>
                     <br><br>
-                    I strongly can say <b>YES</b> it happened in the past.
-                    Why not in the present to make a better future?
-                    Im sure it, even more. It will.
+                    Release covers, remixes, edits or simply take more than 10 seconds from a song in a audiovisual
+                    material
+                    could bring the djs a lot of troubles and legal problems. It is a theme refered more to laws than
+                    art.
+                    I think everyone have to give credit to a another person work, specially in song cause they are a
+                    expression of art and art is creativity, it is mind even someone i could consider my art as me.
+
+                    Talking about movies i think that is not to much problem. legal stuff i usually no a problem and i
+                    belive that is a way for new generations to look back in art history.
                     <br><br>
                 </p>
             </div>
