--- a/progress3.html
+++ b/progress3.html
@@ -59,15 +59,15 @@
         </div>
 
         <div class="column">
-            <a href="w8.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w8_summary.jpeg" alt="udla">
+            <a href="w14.html" class="image">
+                <img class="image__img" src="img/artdev/progress3/w14_project.jpeg" alt="roses">
                 <div class="image__overlay">
-                    <div class="image__title">4</div>
+                    <div class="image__title">14</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w8.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w8_opinion.jpeg" alt="hidden">
+            <a href="w14.html" class="image">
+                <img class="image__img" src="img/artdev/progress3/w14_opinion.jpeg" alt="art">
                 <div class="image__overlay">
                     <div class="image__title">14</div>
                     <p class="image__text">Wk</p>
