--- a/w14.html
+++ b/w14.html
@@ -41,28 +41,37 @@
     <!-- act1 -->
     <section class="bio">
         <div class="bio__title">
-            <h2 class="title">Week 10</h2>
+            <h2 class="title">Week 14</h2>
         </div>
         <div class="bio__content">
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w10_summary.jpeg" alt="politics and art">
+                    <img src="img/artdev/progress3/w14_project.jpeg" alt="project">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Weekly Video Summary
+                    Self-criticism of creative projects
                 </h2>
                 <p>
+                    What does it mean?
+                    <br>
+                    it means all the love and affection that the group feels for their mothers respectively.
                     <br><br>
-                    This week's videos show us the way humans make and see art everywhere.
-                    And How politics influence the art in some aspects of itself and how ot politics becomes a kind of
-                    inspiration for somo people.
-                    Identity and symbols overcome the beauty of art in this new social and public culture.
-                    The word "Freedom" and its concept reaches with force to people who with art try to fight against a
-                    system that they do not support or also to defend peace in the face a nonesene war.
+                    What is expected to be achieved as a final product?
+                    <br>
+                    We want to do a "collage" of our moms pictures and our own produced song about mom's love.
+                    <br><br>
+                    What has been achieved?
+                    <br>
+                    We have selectionated all the necessary images and pictures that we want to use.
+                    <br></br>
+                    Missing?
+                    <br>
+                    We have to join the music with the images.
+                    <br><br>
                 </p>
             </div>
         </div>
@@ -74,21 +83,27 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w10_guayasamin.jpeg" alt="El dictador">
+                    <img src="img/artdev/progress3/w14_opinion.jpeg" alt="eye">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    What is the message of the work in relation to the political situation in the region?
+                    Weekly Opinion
                 </h2>
                 <p>
+                    What is the value we give to art based on?
+                    <br>
+                    I think it is based on the idea that the essence of art is an idea or concept, the perception of
+                    beauty or harmony, and that it can exist in different ways and in the absence of an object as its
+                    representation.
                     <br><br>
-                    I love guayasamin and all In his works, he vivifies his position with respect to humans and society,
-                    which are plagued by
-                    injustices, inequality, humiliation, poverty and forgetfulness for respect for indigenous roots,
-                    detachment from the ancestral past from which the Ecuadorian mestizo moved away. It also shows both
-                    suffering and human contradictions, as well as the will to seek light, exit, liberation.
+                    How has my perception of art changed throughout the semester?
+                    <br>
+                    My perception of art has changed a lot since I started the course, at the beginning I only saw art
+                    as a representation of extreme aptitude and talent like the works of Velasquez for example, but over
+                    time I have realized that art is sometimes even in the simplest forms
+                    <br></br>
                 </p>
             </div>
         </div>
