--- a/progress3.html
+++ b/progress3.html
@@ -76,15 +76,15 @@
         </div>
 
         <div class="column">
-            <a href="w9.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w9_myear.jpeg" alt="ear">
+            <a href="w15.html" class="image">
+                <img class="image__img" src="img/artdev/progress3/w15_summary.jpeg" alt="social media">
                 <div class="image__overlay">
                     <div class="image__title">15</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w9.html" class="image">
-                <img class="image__img" src="img/artdev/progress2/w9_summary.jpeg" alt="summary">
+            <a href="w15.html" class="image">
+                <img class="image__img" src="img/artdev/progress3/w15_opinion.jpeg" alt="walt">
                 <div class="image__overlay">
                     <div class="image__title">15</div>
                     <p class="image__text">Wk</p>
