--- a/w15.html
+++ b/w15.html
@@ -48,88 +48,61 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w11_song.jpeg" alt="song">
+                    <img src="img/artdev/progress3/w15_summary.jpeg" alt="social media">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Questions
+                    Reflection on creative projects
                 </h2>
                 <p>
-                    What do we want to communicate with our creation?
+                    In which spaces could I spread my artistic product and why?
                     <br>
-                    We want to communicate love, nostalgia and gratitude.
+                    I think that the most convenient thing is to spread the work on networks since it can reach more
+                    people with which more people can appreciate the work
+                    <br></br>
+                    What kind of audiences is it aimed at and why?
                     <br>
-                    Why did we choose that message?
-                    <br>
-                    we miss our mother
-                    <br>
-                    Why is it important?
-                    <br>
-                    Family is the most important thing in life
-                    <br>
-                    How are we doing it?
-                    <br>
-                    Currently we are writting the song and making the melody
-                    <br>
-                    How are we going to use the new artistic language and production
-                    strategies to reinforce that message?
-                    <br>
-                    We are making the lyrics with all our new artistic language and strategies
-                    <br><br>
+                    I believe that my artistic product is directed towards all types of public. We all have a mother,
+                    living or dead, but there is such love.
+                    <br></br>
                 </p>
             </div>
         </div>
     </section>
-
 
     <!-- act 2 -->
     <section class="bio weeks">
         <div class="bio__content">
+
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w11_summary.jpeg" alt="summary">
+                    <img src="img/artdev/progress3/w15_opinion.jpeg" alt="walt">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Weekly Summary
+                    Weekly Opinion
                 </h2>
                 <p>
-                    <br><br>
-                    This week we were able to learn about how religion, culture and art are closely related and how
-                    these can be a bridge not only between people but also between cultures.
-                    <br><br>
-                    We can also see art as a
-                    tool capable of not only helping human beings but also saving them and getting them out of difficult
-                    situations.
-                </p>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- act 3 -->
-    <section class="bio weeks">
-        <div class="bio__content">
-
-            <div class="col left-col">
-                <div class="bio__card">
-                    <img src="img/artdev/progress2/w11_needs.jpeg" alt="needs hands">
-                </div>
-            </div>
-
-            <div class="col right-col">
-                <h2 class="content-title">
-                    In what ways can art become a voice for people and their different needs?
-                </h2>
-                <p>
-                    Art, over the centuries, has served as an instrument to express and sublimate the experience of
-                    human beings. However, today it takes on a meaning that many ignored, that of channeling pain and
-                    all those negative situations in order to heal and create something beautiful from it, this is
-                    something that he knows very well.
+                    What is the value of artists in society?
+                    <br>
+                    The role of the artist in society I would say it would be for me:
+                    The author of a work that is given an appreciative and very important value for society, they are
+                    the soul of art because they have an extraordinary imagination and the ability to capture the image
+                    in their mind to create their own work of art, therefore it is important that we respect their work
+                    and value them for what they are, the soul of the culture.
+                    <br></br>
+                    What can we do to help artists find a decent space in society?
+                    <br>
+                    For example, in the economic sense, it would be: making donations, attending their concerts, sharing
+                    with others the taste for their music, in the case of records, buying their songs, their art. And
+                    more in depth would be in educational matters, educating the population that this type of creative
+                    people exists and that they are necessary. However, I believe that those who seek their space earn
+                    it.
+                    <br></br>
                 </p>
             </div>
         </div>
