--- a/progress3.html
+++ b/progress3.html
@@ -93,15 +93,15 @@
         </div>
 
         <div class="column">
-            <a href="w10.html" class="image">
-                <img class="image__img" src="img/artdev/progress3/w13_video.jpeg" alt="videoSummary">
+            <a href="w16.html" class="image">
+                <img class="image__img" src="img/artdev/progress3/w16_summary.jpeg" alt="creativity">
                 <div class="image__overlay">
                     <div class="image__title">16</div>
                     <p class="image__text">Wk</p>
                 </div>
             </a>
-            <a href="w10.html" class="image">
-                <img class="image__img" src="img/artdev/progress3/w13_questions.jpeg" alt="dj">
+            <a href="w16.html" class="image">
+                <img class="image__img" src="img/artdev/progress3/w16_opinion.jpeg" alt="grow">
                 <div class="image__overlay">
                     <div class="image__title">16</div>
                     <p class="image__text">Wk</p>
@@ -115,8 +115,9 @@
         <span class="footer-title">
             WMYM
         </span>
-        <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio" target="_blank">Art
-            Portfolio</a>
+        <a href="https://github.com/WashingtonYandun/Art-Human-Expression-Communication_Portfolio" target="_blank">
+            Art portfolio
+        </a>
     </footer>
 </body>
 
