--- a/w16.html
+++ b/w16.html
@@ -37,7 +37,6 @@
         </div>
     </header>
 
-
     <!-- act1 -->
     <section class="bio" id="bio">
         <div class="bio__title">
@@ -48,32 +47,28 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w12_expo.jpeg" alt="firestone">
+                    <img src="img/artdev/progress3/w16_summary.jpeg" alt="creativity">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    What did I learn about the work of the other groups?
+                    Why should value be given to art in all educational processes?
                 </h2>
                 <p>
                     <br><br>
-                    Well, I really liked the works done by my friends. Although I could
-                    notice a special taste for music in english wich is good.
-                    Personally, I like their
-                    works so much i love to listen music in english too.
-                    With the exhibitions I was able to
-                    analyze those songs and mine in a better way, as well as being able to make a deeper analysis of
-                    them. I really
-                    liked all songs. (But my group's was the best).
-                    I know it is not the most
-                    technical or worked song, but it reflects a lot from me and what I love.
+                    You must have art as a subject in every educational process since, in my opinion, this helps the
+                    student to motivate, encourage and exploit their creativity, not only in the artistic sector but
+                    also in whatever the subject to be studied, it would also help the student to have a better
+                    perception of the world in which he lives, a broader conception of the world, would help to have a
+                    better perception of anything he studies, since everything that is learned must be found a form of
+                    creativity.
+                    Art is one of the most beautiful things that exist, it is a guide to life,
                     <br><br>
                 </p>
             </div>
         </div>
     </section>
-
 
     <!-- act 2 -->
     <section class="bio" id="bio">
@@ -81,57 +76,29 @@
 
             <div class="col left-col">
                 <div class="bio__card">
-                    <img src="img/artdev/progress2/w12_progress.jpeg" alt="Generative art">
+                    <img src="img/artdev/progress3/w16_opinion.jpeg" alt="grow">
                 </div>
             </div>
 
             <div class="col right-col">
                 <h2 class="content-title">
-                    Progress Summary
+                    Opinion and Questions
                 </h2>
                 <p>
-                    <br><br>
-                    Well, this progress was niceier for me because I could do more work mith my friends and a song. I
-                    was able discover
-                    people who likes art as much as me, and among those things is art and music. I really liked what is
-                    going the subject is very entertaining and It helps me to awaken that artistic side of me that I
-                    thought
-                    was asleep. It was incredible for me to even improve this portfolio since I was able to grow up
-                    my artistic and programming skills.
-                    <br><br>
-                    Put this picture cause i love it.
-                </p>
-            </div>
-        </div>
-    </section>
-
-
-    <!-- act 3 -->
-    <section class="bio">
-        <div class="bio__content">
-            <div class="col left-col">
-                <div class="bio__card">
-                    <img src="img/artdev/progress2/w12_summary.jpeg" alt="summary">
-                </div>
-            </div>
-
-            <div class="col right-col">
-                <h2 class="content-title">
-                    Weekly videos Summary
-                </h2>
-                <p>
-                    <br><br>
-                    the technological development of the world is fundamental not only for the technical aspects but
-                    also for art and these two processes when using creative processes have a strong connection that
-                    makes them necessary for each other. It can also be said that thanks to the creative processes
-                    provided by art we can improve creative processes for things that are not very artistic.
+                    What I learned?
                     <br>
-                    What is the role of technology in art? Is it a benefit/advancement? Why?
+                    I have learned a lot about everything that refers to artistic appreciation and how art can influence
+                    people, about how people can be influenced by art, and above all, about the importance of beauty in
+                    our lives, too I have come to learn that art in education is very important, and that is because
+                    over time art has played an important role in the development of our civilization, and that art is a
+                    means of communication that can be shared. for everyone in different ways, and that with art we can
+                    communicate and express many things and that is why it is very important.
+                    <br></br>
+                    What can be improved?
                     <br>
-                    I believe that art and technology go hand in hand cannot advance alone, they are needed. I also
-                    believe that technology is a fundamental piece of art. Before you could not use purple color because
-                    it is expensive and difficult to extract and now with an editing program we can fill a screen with
-                    purple. We don't even need pigment
+                    Creo que se puede mejorar todo no porque este mal, sino porque en si siempre algo puede ser mejor,
+                    porque asi somos los humanos, siempre en busca de ser mejores.
+                    <br></br>
                 </p>
             </div>
         </div>
